; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_setflags.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_setflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }

@F_SETFL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @realfs_setflags(%struct.fd* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fd*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.fd* %0, %struct.fd** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.fd*, %struct.fd** %4, align 8
  %8 = getelementptr inbounds %struct.fd, %struct.fd* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @F_SETFL, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @open_flags_real_from_fake(i32 %11)
  %13 = call i32 @fcntl(i32 %9, i32 %10, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = call i32 (...) @errno_map()
  store i32 %17, i32* %3, align 4
  br label %19

18:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %16
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @fcntl(i32, i32, i32) #1

declare dso_local i32 @open_flags_real_from_fake(i32) #1

declare dso_local i32 @errno_map(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
